# shader_explorer

./: .clang-format  README.md  build_slang.sh  meson.build  meson.options
.github/workflows/: release.yml
src/: generated_gpu_catalog.inc  main.cpp  vulkan_runtime.cpp  vulkan_runtime.hpp
subprojects/: glslang.wrap  mesa.wrap  spirv-headers.wrap  spirv-tools.wrap  vulkan-headers.wrap  vulkan-loader.wrap
test_shader/: complex_compute.slang  mat_mul.glsl
tools/: bundle_runtime_deps.py  package_release.sh  relocate_icd_manifests.py  run_and_stamp.py
