option(
  'no_warnings',
  type : 'boolean',
  value : false,
  description : 'Disable project warning flags'
)

option(
  'no_werror',
  type : 'boolean',
  value : false,
  description : 'Do not promote warnings to errors'
)

option(
  'ci_debug_without_slang',
  type : 'boolean',
  value : false,
  description : 'Skip external Slang validation and the final executable to debug CI failures before building Slang'
)
